3.8.2 - 15/02/2020
Fixed:
- SBo repository view Packages and New version
- msb repository PACKAGES.txt file
BugFix:
- Upgrade distribution with option -c, --check

3.8.1 - 13/02/2020
Fixed:
- Bugfix double install packages from slack regular repo
  and patches directory #122
Updated:
- Removed status progress bar
- Setup and installing
- Managed blacklist in the simple way

3.8.0 - 05/02/2020
Added:
- Many changes happen in this version, a big part of code has been rewritten
- to improve the code for support Python 3. Possibly will there are some bugs
- in the feture versions I would appreciate it if report them.

- Cheers,
- Dimitris

Fixed:
- Bugfix: merge files with slack repository between current and slack versions
Updated:
- code to improve for Python 3

3.7.4 - 20/12/2019
Fixed:
- Bugfix: UnicodeDecodeError: 'utf-8' codec can't decode byte

3.7.3 - 11/12/2019
FIxed:
- Bugfix: Slackware-current from Alien Bob 20191130 #119
- Improving call class methods for reposiory updating
- Replace requests dependency with urllib3
- Code style to python3 compatibility

3.7.2 - 06/12/2019
Fixed:
- Bugfix handle requests raise ConnectionError

3.7.1 - 03/12/2019
Updated:
- pythondialog dependency
- slackware mirrors
- pip installation method
- improved setup.py file for python3
- print function for python3 format
Added:
- Dependency python requests replace bult-in python urllib

3.7.0 - 01/12/2019
Updated:
- Switch to python3

3.4.3 - 19/05/2019
Updated:
- Update gen_repos_files.sh to version 1.94
Fixed:
- Downloader to recognise the char +
- Build from sources with char + in name

3.4.2 - 23/01/2019
Fixed:
- Bugfixed delete build folder in network option

3.4.1 - 23/01/2019
Fixed:
- Fix manpage

3.4.0 - 21/01/2019
Updated:
- Updated manpage
- Convert examples, repositories and install text files to markdown format
- Merge sbo/remove.py in the slpkg/remove.py file
Fixed:
- Bugfix: update slpkg itself from gitlab repository
Added: