@@ -133,7 +133,8 @@ class Patches:
         """Store and return packages for upgrading
         """
         data = repo_data(self.PACKAGES_TXT, "slack", self.flag)
-        black = BlackList().get_black()
+        b = BlackList()
+        black = b.get_black()
         for name, loc, comp, uncomp in zip(data[0], data[1], data[2], data[3]):
             repo_pkg_name = split_package(name)[0]
             if (not os.path.isfile(self.meta.pkg_path + name[:-4]) and
